# libfive

./: CMakeLists.txt
cli/: CMakeLists.txt  cli.cpp
docker/: Dockerfile copy.ubuntu  README.md  spheres.stl
libfive/: CMakeLists.txt
libfive/bind/webassembly/: CMakeLists.txt
libfive/include/: libfive.h
libfive/include/libfive/eval/: eval_array.hpp  eval_deriv_array.hpp  eval_jacobian.hpp  evaluator.hpp
libfive/include/libfive/oracle/: oracle_storage.hpp
libfive/include/libfive/render/brep/: brep.hpp  contours.hpp  dual.hpp  mesh.hpp  neighbors.hpp  object_pool.hpp  per_thread_brep.hpp  progress.hpp  region.hpp  root.hpp  settings.hpp  worker_pool.hpp  xtree.hpp
libfive/include/libfive/render/brep/dc/: dc_neighbors.hpp  dc_tree.hpp  intersection.hpp
libfive/include/libfive/render/brep/hybrid/: hybrid_neighbors.hpp  hybrid_tree.hpp
libfive/include/libfive/render/brep/simplex/: simplex_neighbors.hpp  simplex_tree.hpp
libfive/include/libfive/render/discrete/: heightmap.hpp
libfive/include/libfive/tree/: data.hpp
libfive/src/: CMakeLists.txt  libfive.cpp
libfive/src/render/brep/: mesh.cpp  neighbors.inl  object_pool.inl  progress.cpp  worker_pool.inl  xtree.inl
libfive/src/render/brep/dc/: dc_neighbors.inl  dc_tree.inl
libfive/src/render/brep/hybrid/: hybrid_tree.inl
libfive/src/render/brep/simplex/: simplex_debug.cpp  simplex_mesher.cpp  simplex_neighbors.inl  simplex_tree.inl
libfive/src/render/brep/vol/: vol_tree.cpp
libfive/src/render/discrete/: heightmap.cpp
libfive/src/tree/: tree.cpp
libfive/src/webassembly/: getMesh.cpp
libfive/test/: heightmap.cpp
libfive/test/docker/: Dockerfile.emscripten.debian  Dockerfile.ubuntu  README.md
